API parameters rewrite Rewrite many backend processing logic, use parameters maps instead for future updates
