# internal/controller/ban.go
@@ -10,39 +10,22 @@ import (
 // ================= CRUD Operations =================
 
 // ================= Create =================
-func BanUser(db *gorm.DB, issuer *db_model.User, target *db_model.User, duration int, reason string, ban_type string) (*db_model.Ban, error) {
-	ban := &db_model.Ban{
-		IssuerID: issuer.ID,
-		TargetID: target.ID,
-		Type:     ban_type,
-		EndsAt:   calculateBanEnd(duration),
-		Reason:   reason,
-	}
-	err := ban.CreateBan(db)
-	return ban, err
-}
-
-func BanUsers(db *gorm.DB, issuer *db_model.User, targets []*db_model.User, duration int, reason string, ban_type string) ([]*db_model.Ban, error) {
-	bans := make([]*db_model.Ban, len(targets))
-	for i, target := range targets {
+func BanUsers(db *gorm.DB, query_params *db_model.BansPostRequestParams) ([]*db_model.Ban, error) {
+	bans := make([]*db_model.Ban, len(query_params.Target))
+	for i, target := range query_params.Target {
 		bans[i] = &db_model.Ban{
-			IssuerID: issuer.ID,
+			IssuerID: query_params.Issuer.ID,
 			TargetID: target.ID,
-			Type:     ban_type,
-			EndsAt:   calculateBanEnd(duration),
-			Reason:   reason,
+			Type:     query_params.Type,
+			EndsAt:   time.Now().Add(time.Duration(query_params.Duration) * time.Second),
+			Reason:   query_params.Reason,
 		}
 	}
 	err := db_model.CreateBans(db, bans)
 	return bans, err
 }
 
-// ================= Read =================
-func calculateBanEnd(duration_hour int) int {
-	return int(time.Now().Unix()) + duration_hour*3600
-}
-
-func GetBans(db *gorm.DB, ids []int, target_ids []int, issuer_ids []int, types []string, reason string, ends_after int) ([]*db_model.Ban, error) {
+func GetBans(db *gorm.DB, query_params *db_model.BansGetRequestParams) ([]*db_model.Ban, error) {
 	if db == nil {
 		var err error
 		db, err = db_model.OpenConnection()
@@ -51,7 +34,7 @@ func GetBans(db *gorm.DB, ids []int, target_ids []int, issuer_ids []int, types [
 		}
 		defer db_model.CloseConnection(db)
 	}
-	return db_model.GetBansByFilters(db, ids, target_ids, issuer_ids, types, reason, ends_after)
+	return db_model.GetBansByFilters(db, query_params)
 }
 
 func GetBanByID(db *gorm.DB, id int) (*db_model.Ban, error) {
@@ -67,24 +50,29 @@ func GetBanByID(db *gorm.DB, id int) (*db_model.Ban, error) {
 }
 
 // ================= Update =================
-func UpdateBan(db *gorm.DB, ban *db_model.Ban, new_duration int, new_reason string) error {
-	ban.EndsAt = calculateBanEnd(new_duration)
-	ban.Reason = new_reason
-
+func UpdateBan(db *gorm.DB, query_params *db_model.BansPatchRequestParams) (*db_model.Ban, error) {
 	if db == nil {
 		var err error
 		db, err = db_model.OpenConnection()
 		if err != nil {
-			return err
+			return nil, err
 		}
 		defer db_model.CloseConnection(db)
 	}
 
-	return ban.UpdateBan(db)
+	ban, err := db_model.GetBanByID(db, query_params.ID)
+	if err != nil {
+		return nil, err
+	}
+
+	ban.EndsAt = time.Now().Add(time.Duration(query_params.Duration) * time.Second)
+	ban.Reason = query_params.Reason
+
+	return ban, ban.UpdateBan(db)
 }
 
 // ================= Delete =================
-func DeleteBan(db *gorm.DB, ban *db_model.Ban) error {
+func DeleteBan(db *gorm.DB, ban_id int) error {
 	if db == nil {
 		var err error
 		db, err = db_model.OpenConnection()
@@ -93,10 +81,10 @@ func DeleteBan(db *gorm.DB, ban *db_model.Ban) error {
 		}
 		defer db_model.CloseConnection(db)
 	}
-	return ban.DeleteBan(db)
+	return db_model.DeleteBanById(db, ban_id)
 }
 
-func DeleteBans(db *gorm.DB, bans []*db_model.Ban) error {
+func DeleteBans(db *gorm.DB, query_params *db_model.BansDeleteRequestParams) error {
 	if db == nil {
 		var err error
 		db, err = db_model.OpenConnection()
@@ -105,5 +93,21 @@ func DeleteBans(db *gorm.DB, bans []*db_model.Ban) error {
 		}
 		defer db_model.CloseConnection(db)
 	}
+
+	bans, err := db_model.GetBansByFilters(db, &db_model.BansGetRequestParams{
+		ID:       query_params.ID,
+		TargetID: query_params.TargetID,
+		IssuerID: query_params.IssuerID,
+		Type:     query_params.Type,
+		Order:    query_params.Order,
+		Limit:    query_params.Limit,
+		Page:     query_params.Page,
+		Offset:   query_params.Offset,
+	})
+
+	if err != nil {
+		return err
+	}
+
 	return db_model.DeleteBans(db, bans)
 }
